Fix text input dark mode

--- a/src/styles/input.module.css
+++ b/src/styles/input.module.css
@@ -18,7 +18,11 @@
     }
 }
 
-html[class*="dark"] .input {
+main[class*="dark"] .input {
     @apply bg-black/70;
     @apply border-gray-500;
+
+    &:focus-visible {
+        @apply border-primary-500;
+    }
 }
